--- a/static/css/style.css
+++ b/static/css/style.css
@@ -567,7 +567,7 @@ margin-top:120px;
 	.footer-div
 	{
 	background-size: cover !important;
-	position:absolute; bottom:0;
+	position:relative; 
 	 }
 	 
 	 .lab-list-col-10
