--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -99,35 +99,33 @@
 							
 							<!--edit -->
 <h1 class="text-h2-lightblue">AES and Modes of Operation</h1><div class="content" id="experiment-article-section-6-content">
-<ol>
-<li><p>ECB stands for</p>
-<ul class="multichoice">
-<li><input name="quest_581" type="radio" value="Electronic cipher Block"/>Electronic cipher Block</li>
-<li><input name="quest_581" type="radio" value="Electronic code Block"/>Electronic code Block</li>
-<li><input name="quest_581" type="radio" value="Electronic code Book"/>Electronic code Book</li>
-<li><input name="quest_581" type="radio" value="Electronic cipher Book"/>Electronic cipher Book</li>
-</ul></li>
-<li><p>Which among the following is not CPA secure?</p>
-<ul class="multichoice">
-<li><input name="quest_593" type="radio" value="ECB"/>ECB</li>
-<li><input name="quest_593" type="radio" value="CBC"/>CBC</li>
-<li><input name="quest_593" type="radio" value="CFB"/>CFB</li>
-<li><input name="quest_593" type="radio" value="None"/>None</li>
-</ul></li>
-<li><p>Which of the following are block ciphers?</p>
-<ul class="multichoice">
-<li><input name="quest_589" type="radio" value="ECB"/>ECB</li>
-<li><input name="quest_589" type="radio" value="CBC"/>CBC</li>
-<li><input name="quest_589" type="radio" value="CFB"/>CFB</li>
-<li><input name="quest_589" type="radio" value="All"/>All</li>
-</ul></li>
-<li>Which is the fastest mode of operation among four mode of operation?</li>
-<li>Which mode of operation is more secure?</li>
-<li>What is importance of Intialiczation Vector(IV) and CTR ?</li>
-<li>Why ECB is not CPA-secure and Why CBC is CPA-secure?</li>
-<li>Suppose IV is not random.Then is CBC and OFB mode both secure</li>
-</ol>
-</div>						</div>
+<div class="content" id="experiment-article-section-6-content">
+<form action="{{request.path}}" method="post">
+         <label>1. ECB stands for</label><br>
+         <input type="radio" name="A1" value="1" checked>Electronic cipher Block<br>
+         <input type="radio" name="A1" value="2">Electronic code Block<br>
+         <input type="radio" name="A1" value="3">Electronic code Book<br>
+         <input type="radio" name="A1" value="4">Electronic cipher Book<br>
+         <label>2.Which among the following is not CPA secure?</label><br>
+         <input type="radio" name="A2" value="1" checked>ECB<br>
+         <input type="radio" name="A2" value="2">CBC<br>
+         <input type="radio" name="A2" value="3">CFB<br>
+         <input type="radio" name="A2" value="4">None<br>
+         <label>3.Which of the following are block ciphers?</label><br>
+         <input type="radio" name="A3" value="1" checked>ECB<br>
+         <input type="radio" name="A3" value="2">CBC<br>
+         <input type="radio" name="A3" value="3">CFB<br>
+         <input type="radio" name="A3" value="4">All<br>
+         <label>4.Which is the fastest mode of operation among four mode of operation?</label><br>
+         <input type="text" name="A4"><br>
+         <label>5.Which mode of operation is more secure? </label><br>
+         <input type="text" name="A5"><br>
+         <label>6.What is importance of Intialiczation Vector(IV) and CTR ? </label><br>
+         <input type="text" name="A6"><br>
+         <label>7.Why ECB is not CPA-secure and Why CBC is CPA-secure?</label><br>
+         <input type="text" name="A7"><br>
+<input type = "submit" value = "Submit">
+</form></div>						</div>
 					</div>
 			</div>
 			<!-- =================================================================================================================================== -->
