--- a/templates/Footer.html
+++ b/templates/Footer.html
@@ -60,13 +60,12 @@
     <!-- Include js plugin -->
 	<script src="{{ url_for('static', filename='vendors/owl-carousel/owl.carousel.js') }}"></script>
     
-    <script src="{{ url_for('static', filename='js/exp8/aes.js') }}"></script>
+  
     <script src="{{ url_for('static', filename='js/exp8/post_req.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/exp8/flaskJs.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/exp8/aes-enc.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/aes-dec.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/aes-test.js') }}"></script>
-	
+	<script src="{{ url_for('static', filename='js/exp8/exp8.js') }}"></script>
+
+
 	<script type="text/javascript">
 	$(document).ready(function() {
 		 console.log(document.getElementById(mode).value);
@@ -105,5 +104,5 @@
 	 
 	});
 	</script>
-	
+
 </html>
