--- a/templates/Data.html
+++ b/templates/Data.html
@@ -30,7 +30,7 @@
          </tbody>
       </table>
       </div>
-
-      </div>
-      <div>
+   </div>
+</div>
+      <a href="{{url_for('introduction')}}">Go back</a>
 {% include "Footer.html" %}
