--- a/templates/Data.html
+++ b/templates/Data.html
@@ -1,16 +1,18 @@
 {% include "Header.html" %}
 <div>
+      <h1 class="text-h2-lightblue">AES and Modes of Operation</h1>
+   <h3> Previous Responses</h3>
 <table>
          <thead>
             <tr>
-               <th>     Identity    </th>
-               <th>     Answer 1    </th>
-               <th>     Answer 2    </th>
-               <th>     Answer 3    </th>
-               <th>     Answer 4    </th>
-               <th>     Answer 5    </th>
-               <th>     Answer 6    </th>
-               <th>     Answer 7    </th>
+               <th nowrap>     Identity    </th>
+               <th nowrap>     Answer 1    </th>
+               <th nowrap>     Answer 2    </th>
+               <th nowrap>     Answer 3    </th>
+               <th nowrap>     Answer 4    </th>
+               <th nowrap>     Answer 5    </th>
+               <th nowrap>     Answer 6    </th>
+               <th nowrap>     Answer 7    </th>
             </tr>
          </thead>
 
