--- a/templates/Header.html
+++ b/templates/Header.html
@@ -23,7 +23,7 @@
 
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-	<script type="text/javascript" src = 'tabs.js'></script>
+	<script type="text/javascript" src = "{{ url_for('static', filename='js/tabs.js') }}"></script>
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67558473-1', 'auto');ga('send', 'pageview');</script>	
 </head>
 <body id="page-top" class="index">
@@ -46,26 +46,26 @@
 			            <!-- Collect the nav links, forms, and other content for toggling -->
 			            <div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
 			               
-			                <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
+			                <!-- <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
 			                	<li>
-			                		<form method="get" action="../../../../search-result.html">
+			                		<form method="get" action="search-result.html">
 			                        	<input type="text" class="search-textbox" placeholder="SEARCH FOR A LAB" name="q" id="q"/>
 			                        	<input type="submit" value="" class="search-button" />
 			                        </form>
 			                	</li>
-			                </ul>
+			                </ul> -->
 			                
-			             <ul class="nav navbar-nav navbar-right menu-ul">
+			                <ul class="nav navbar-nav navbar-right menu-ul">
 			                    <li class="page-scroll menu-li " >
-			                        <a href="http://vlabs.ac.in/index.html" class="menu-a" >HOME</a>
+			                        <a href="http://vlabs.ac.in/" class="menu-a" >HOME</a>
 			                    </li>
 			                    <li class="page-scroll menu-li menu-li-active">
 			                        <a href="http://vlabs.ac.in/labs.html"  class="menu-a menu-a-active" >ALL LABS</a>
 			                    </li>
 			                    <li class="page-scroll menu-li " >
-			                        <a href="http://vlabs.ac.in/index.html#partner" class="menu-a" >PARTNERS</a>
+			                        <a href="http://vlabs.ac.in/#partner" class="menu-a" >PARTNERS</a>
 			                    </li><li class="page-scroll menu-li " >
-			                        <a href="http://vlabs.ac.in/index.html#contact" class="menu-a" >CONTACT</a>
+			                        <a href="http://vlabs.ac.in/#contact" class="menu-a" >CONTACT</a>
 			                    </li>
 			                </ul>
 			                
@@ -88,12 +88,21 @@
 			
 			<!-- =================================================================================================================================== -->
 			<div class="container-fluid"  style="margin-left: 35px; margin-right: 35px;">
-				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a href="http://vlabs.ac.in/computer-science-and-engineering-labs.html" class="sidebar-a" >Computer Science & Engineering</a> &rarr;<a href="../Introduction.html" class="sidebar-a" >Cryptography Lab</a>&nbsp&rarr;<a href="../Experiments.html" class="sidebar-a" >List Of Experiments</a><br/></h2>
+				<h2 class="text-h2-lightblue" style=" margin-bottom: 20px; margin-top: 10px; "><a 
+="http://vlabs.ac.in/computer-science-and-engineering-labs.html" class="sidebar-a" >Computer Science & Engineering</a> &rarr;<a href="../Introduction.html" class="sidebar-a" >Cryptography Lab</a>&nbsp&rarr;<a href="../Experiments.html" class="sidebar-a" >List Of Experiments</a><br/></h2>
 					
 					<div class="row">
 						<div class="col-md-2 sidebar-col-2">
 						<!--edit1-->
-<a href="{{url_for('introduction')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Introduction</h3></a><a href="{{url_for('theory')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Theory</h3></a><a href="{{url_for('objective')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Objective</h3></a><a href="{{url_for('experiment')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Experiment</h3></a><a href="{{url_for('manual')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Manual</h3></a><a href="{{url_for('quiz')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Quizzes</h3></a><a href="{{url_for('procedure')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Procedure</h3></a><a href="{{url_for('further')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Further Readings</h3></a><a href="{{url_for('feedback')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Feedback</h3></a>						</div>
+<a href="{{url_for('introduction')}}" class="sidebar-a" > <h3 class="text-h3-darkblue active" style="margin-top: 2px;">Introduction</h3></a>
+<a href="{{url_for('theory')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Theory</h3></a>
+<a href="{{url_for('objective')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Objective</h3></a>
+<a href="{{url_for('experiment')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Experiment</h3></a>
+<a href="{{url_for('manual')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Manual</h3></a>
+<a href="{{url_for('quiz')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Quizzes</h3></a>
+<a href="{{url_for('procedure')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Procedure</h3></a>
+<a href="{{url_for('further')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Further Reading</h3></a>
+<a href="{{url_for('feedback')}}" class="sidebar-a" > <h3 class="text-h3-darkblue" style="margin-top: 2px;">Feedback</h3></a>						</div>
 						
 						<div class="col-md-10 lab-list-col-10">
 							
