--- a/templates/Theory.html
+++ b/templates/Theory.html
@@ -1,11 +1,11 @@
 {% include "Header.html" %}
 <h1 class="text-h2-lightblue">AES and Modes of Operation</h1><div class="content" id="experiment-article-section-2-content">
 <p>For a very brief theory of "Advanced Encryption Standard" and their analysis, click <a href="media/16_AES.pdf">here</a></p>
-<p>For a very brief theory of "Modes of Encryption"  and their analysis, click <a href="media/Modes of operation.pdf">here</a></p>
-<p><img alt="here" id="ecbm_image" src="{{ url_for('static', filename='images/ecbm.png') }}"/></p><center><b>Electronic Code Book(ECB) mode</b></center>
-<p><img alt="here" id="cdbm_image" src="{{ url_for('static', filename='images/cdbm.png') }}"/></p><center><b>Cipher Block Chaining(CBC) mode</b> </center>
-<p><img alt="here" id="ctr_image" src="{{ url_for('static', filename='images/ctr.png') }}"/></p><center><b>Contur mode</b></center>
-<p><img alt="here" id="ofbm_imgae" src="{{ url_for('static', filename='images/ofbm.png') }}"/></p><center><b>Output FeedBack mode</b></center>
+<p>For a very brief theory of "Modes of Encryption"  and their analysis, click <a href="media/Modes of operation.pdf">here</a></p><br><br>
+<p style="left:25%;"><b>Electronic Code Book (ECB) mode</b></p><p><img alt="here" id="ecbm_image" src="{{ url_for('static', filename='images/ecbm.png') }}"/></p><br>
+<b><p style="left:25%;">Cipher Block Chaining (CBC) mode</p></b> <p><img alt="here" id="cdbm_image" src="{{ url_for('static', filename='images/cdbm.png') }}"/></p><br>
+<b><p style="left:25%;">Contur (CTR) mode</p></b><p><img alt="here" id="ctr_image" src="{{ url_for('static', filename='images/ctr.png') }}"/></p><br>
+<b><p style="left:25%;"></p>Output FeedBack (OFB) mode</b></p><p><img alt="here" id="ofbm_imgae" src="{{ url_for('static', filename='images/ofbm.png') }}"/></p><br>
 </div>						</div>
 					</div>
 			</div>
