--- a/templates/Further.html
+++ b/templates/Further.html
@@ -1,7 +1,11 @@
 {% include "Header.html" %}
 <h1 class="text-h2-lightblue">Further Readings</h1><div class="content" id="experiment-article-section-3-content">
 <p>
-             Go to https://searchsecurity.techtarget.com/definition/Advanced-Encryption-Standard
+             <a href="https://searchsecurity.techtarget.com/definition/Advanced-Encryption-Standard" style="color:hotpink">Know more about AES</a><br>
+             <a href="https://pypi.org/project/pycrypto/" style="color:hotpink"> Implementation of AES</a><br>
+             <a href="https://www.youtube.com/watch?v=NHuibtoL_qk&t=1370s" style="color:hotpink"> Detailed video about AES encryption</a><br>
+             <a href="https://www.ibm.com/support/knowledgecenter/en/SSGU8G_12.1.0/com.ibm.sec.doc/ids_en_010.htm" style="color:hotpink"> Basic knowledge about modes of Encryption</a><br>
+             <a href="https://www.lynda.com/Security-tutorials/Cipher-modes/601793/705384-4.html" style="color:hotpink"> Course on Encryption and Modes of Encryption</a><br>
           </p>
 </div>						</div>
 					</div>
