--- a/templates/Footer.html
+++ b/templates/Footer.html
@@ -78,9 +78,9 @@
     
     <!-- Include js plugin -->
 	<script src="{{ url_for('static', filename='vendors/owl-carousel/owl.carousel.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/exp8/post_req.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/exp8/flaskJs.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/exp8/exp8.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/exp8/postReq.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/exp8/getReq.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/exp8/quizVal.js') }}"></script>
 
 	
 	<script type="text/javascript">
