Changed css and Experiment

--- a/templates/Data.html
+++ b/templates/Data.html
@@ -1,7 +1,7 @@
 {% include "Header.html" %}
 <div>
       <h1 class="text-h2-lightblue">AES and Modes of Operation</h1>
-   <h3> Previous Responses</h3>
+   <h3> Previous Responses</h3><br>
 <table>
          <thead>
             <tr>
